# aoc-2021-rust

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: day9-gif.rs
src/: lib.rs
