[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
itertools = {version = "0.10"}
dotenv = "0.15"
reqwest = {version= "0.11", features=["blocking", "cookies"]}
image = {version = "0.23", optional=true}
petgraph = {version = "0.6"}
bimap = {version = "0.6" }


[build-dependencies]
anyhow = "1"
dotenv = "0.15"
reqwest = {version= "0.11", features=["blocking", "cookies"]}

[[example]]
name = "day9-gif"
required-features = ["image"]